2009-07-23  Anthony Green  <green@moxielogic.com>

	* linux-2.6/*: New files.

2009-07-13  Anthony Green  <green@moxielogic.com>

	* scripts/dejagnu/moxie-sim.exp: Tweak gdb test options (can
	reverse debug, for instance).

2009-06-26  Anthony Green  <green@moxielogic.com>

	* build.xml: Build GCC with g++.

2009-06-22  Anthony Green  <green@moxielogic.com>

        * moxie/rtl/verilog/MoxieCore.v: New file.
        * moxie/rtl/verilog/iprinter.v: New file.
        * moxie/rtl/verilog/moxie.v: New file.
        * moxie/rtl/verilog/moxiesoc.v: New file.
        * moxie/rtl/verilog/test.v: New file.
        * moxie/rtl/verilog/testsuite/config/default.exp: New file.
        * moxie/rtl/verilog/testsuite/moxie.modules/iprinter.exp: New file.
        * moxie/rtl/verilog/testsuite/moxie.modules/test-iprinter.v: New file.

2009-06-12  Anthony Green  <green@moxielogic.com>

	* README: Fit within 80 columns.
	* TODO, HACKING: Update.
	* scripts/moxie-elf-gcc.spec.in (with_newlib): Define.  Build a
	bootstrapping compiler by setting this to 0.  Also package
	python files with libstdc++.
	* build.xml: Read properties from
	${user.home}/moxiedev.properties.

2009-05-30  Anthony Green  <green@moxielogic.com>
	
	* HACKING: Added u-boot.  Corrections.
	* README: New file.

2009-05-26  Anthony Green  <green@moxielogic.com>

	* u-boot: Initial u-boot bits.
	* build.xml: Add u-boot build machinery.
	
2009-05-23  Anthony Green  <green@moxielogic.com>

	* test/Makefile (clean): Clean up more stuff.
	* scripts/moxie-elf-newlib.spec.in: Fix install.

2009-05-22  Anthony Green  <green@moxielogic.com>

	* scripts/moxie-elf-qemu.spec.in: Don't install qemu-nbd.

2009-05-16  Anthony Green  <green@moxielogic.com>

	* build.xml: Fix in-tree qemu install prefix.

2009-05-08  Anthony Green  <green@moxielogic.com>

	* scripts/mksrpm.sh: run gcc_upate --touch before tarring up
	gcc sources.
	* scripts/fix-svn.sh: Fix.

2009-05-07  Anthony Green  <green@moxielogic.com>
