@@ -1,6 +1,7 @@
 2009-07-23  Anthony Green  <green@moxielogic.com>
 
 	* linux-2.6/*: New files.
+	* build.xml: Build Linux kernel.
 
 2009-07-13  Anthony Green  <green@moxielogic.com>
 
